# rg-tui

./: README.md  pyproject.toml
src/rg_tui/: __entry__.py  app.py  rg.py  style.tcss
