[project]
name = "rg-tui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.80.1",
]

[project.scripts]
rg_tui = "rg_tui.__entry__:rg_tui"
rg_tui_inline = "rg_tui.__entry__:rg_tui_inline"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "textual-dev>=1.6.1",
]
